k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-rest-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profiles-rest-api
  template:
    metadata:
      labels:
        app: profiles-rest-api
    spec:
      containers:
      - name: profiles-rest-api
        image: IMAGE_URL
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
        readinessProbe:
          httpGet:
            path: /health
  strategy:
    type: RollingUpdate
  imagePullPolicy: Always
