k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profiles-rest-api
spec:
  type: ClusterIP
  selector:
    app: profiles-rest-api
  ports:
  - port: 80
    targetPort: 8000
    name: http
